--- a/Sharmila/Choropleth/Solved/index.html
+++ b/Sharmila/Choropleth/Solved/index.html
@@ -28,6 +28,7 @@
 
     <!-- Leaflet-Choropleth JavaScript -->
     <script type="text/javascript" src="static/js/choropleth.js"></script>
+    <script type="text/javascript" src="static/js/us-states.js"></script>
 
     <!-- Our JS -->
     <script type="text/javascript" src="static/js/config.js"></script>
